feat: make token generation
